# vjson

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  Makefile  PROJECT_STRUCTURE.md  README.md  clippy.toml  final_check.sh  pyproject.toml  rustfmt.toml
.cargo/: config.toml
.github/workflows/: CI.yml
benchmarks/: README.md  benchmark_io.py  benchmark_json.py  benchmark_parallel.py  benchmark_week1.py  benchmark_week1_fast.py  benchmark_week2.py  benchmark_week3_concurrency.py  gpu_comparison_template.py
docs/: ARCHITECTURE.md  COMPLETE_IMPLEMENTATION.md  COMPLETE_OPTIMIZATIONS.md  COMPLETE_SUMMARY.md  DEPLOYMENT_REPORT.md  DESIGN_DECISIONS.md  FEATURES_IMPLEMENTED.md  FINAL_OPTIMIZATION_REPORT.md  FINAL_REPORT.md  HYBRID_SEARCH_DESIGN.md  METADATA_FILTERING.md  OPTIMIZATIONS.md  README.md  WEEK1_SUMMARY.md  WEEK3_CONCURRENCY.md
examples/: basic_usage.py  concurrent_access.py  persistence_demo.py
python/vjson/: __init__.py  __init__.pyi
src/: error.rs  filter.rs  hybrid.rs  index.rs  lib.rs  simd.rs  storage.rs  tantivy_index.rs  utils.rs  vectordb.rs
tests/: README.md  final_verification.py  test_advanced_filters.py  test_concurrent.py  test_crud.py  test_filters.py  test_hybrid_search.py  test_new_features.py  test_persistence.py  test_simple.py
